
8.61  2020-10-01
  - Fixed fork-safety feature in Mojo::UserAgent to work with more than one fork.

8.60  2020-09-27
  - Improved reset method in Mojo::IOLoop to prevent close event to be emitted in affected streams. (kiwiroy)
  - Improved cookbook with Envoy deployment recipe. (zakame)

8.59  2020-09-05
  - Added l function to ojo. (kiwiroy)
  - Added MOJO_PROMISE_DEBUG environment variable to Mojo::Promise.

8.58  2020-08-05
  - Improved app and lite_app generators to use templates with subroutine signatures.
  - Updated all documentation to use subroutine signatures. (kiwiroy)

8.57  2020-07-16
  - Added support for YAML config files.
  - Added module Mojolicious::Plugin::NotYAMLConfig.
  - Improved app generator command to use a YAML config file.
  - Fixed a bug in proxy helpers that caused response content to be ignored in some cases. (mohawk2)
  - Fixed attr_is bug in Test::Mojo that prevented false value comparisons from working correctly. (tim-2)

8.56  2020-06-19
  - Fixed a bug that prevented "% end, begin" to work in Mojo::Template. (jberger)

8.55  2020-06-18
  - Fixed a regression in Mojo::DOM::CSS that caused some selectors to not be valid anymore.

8.54  2020-06-14
  - Added EXPERIMENTAL support for :scope and :has pseudo-classes to Mojo::DOM::CSS. (Eckankar, kraih)
  - Fixed a bug in Mojo::DOM where select and ruby elements were parsed incorrectly.
  - Fixed a but in Mojo::UserAgent::Transactor that prevented compression settings to be inherited across redirects.
  - Fixed a bug where Mojolicious templates could not use the continue Perl keyword.

8.53  2020-06-09
  - Added EXPERIMENTAL extname method to Mojo::File.
  - Fixed a bug in Mojolicious::Types where dotfiles would be considered file extensions.

8.52  2020-06-01
  - Updated project metadata.
  - Fixed a bug in Mojo::Asset::Memory where the upgrade event could not change the temporary directory.

8.51  2020-05-30
  - Improved map efficiency in Mojo::Promise. (mst)