@@ -1,6 +1,7 @@
 
 8.61  2020-10-01
   - Fixed fork-safety feature in Mojo::UserAgent to work with more than one fork.
+  - Fixed reset method in Mojo::IOLoop to not interfere with close events anymore, since that resulted in leaks.
 
 8.60  2020-09-27
   - Improved reset method in Mojo::IOLoop to prevent close event to be emitted in affected streams. (kiwiroy)
